# gz_optitrack_ros2_emulator

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
docs/: px4_sitl_groundtruth.md
include/: math_utils.hpp  topic_proc.hpp
launch/: emulator_for_gazebo_launch.py
msg/: Mocap.msg
src/: CMakeLists.txt  gz_optitrack_emulator_node.cpp
src/lib/: CMakeLists.txt  gz_optitrack_emulator.cpp  gz_optitrack_emulator.hpp
