<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_optitrack_ros2_emulator</name>
  <version>1.0.0</version>
  <description>A ROS2 package for emulating OptiTrack using Gazebo simulation</description>
  <maintainer email="longhao.qian@mail.utoronto.ca">longhao</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>Eigen3</depend>
  <depend>eigen3_cmake_module</depend>  
  <build_depend>libeigen3-dev</build_depend>  

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- To use launch files (best practise) -->
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
